Hive Change Log

Trunk (unreleased changes)

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-62. Support nested types.
    (Ashish Thusoo via dhruba)

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HIVE-60. Fix the build scripts for the new hive tree.
    (Ashish through zshao)

    HIVE-54. Create this file to record the patches going into a 
    particular release. (dhruba)

    HIVE-12. Improve README for Hive.
    (Ashish Thusoo via dhruba)

